--- a/src/menu.html
+++ b/src/menu.html
@@ -207,6 +207,10 @@
         </div>
         <div class="option-group">
           <div class="option">
+            <span>Enable CSS</span>
+            <input type="checkbox" data-setting="css_enabled" />
+          </div>
+          <div class="option">
             <span>CSS Link</span>
             <input type="text" / data-setting="css_link">
           </div>
