--- a/src/assets/html/splash.html
+++ b/src/assets/html/splash.html
@@ -26,7 +26,7 @@
         width: 100%;
         height: 100%;
         overflow: hidden;
-        background: url("https://juice.irrvlo.xyz/banner.png") no-repeat center
+        background: url("../img/juice_banner.png") no-repeat center
           center / cover;
         border-radius: 1.5rem;
         padding: 0.75rem 1rem;
