--- a/src/assets/html/menu.html
+++ b/src/assets/html/menu.html
@@ -12,6 +12,10 @@
     --green: #acfa70;
   }
 
+  .menu ::-webkit-scrollbar {
+    display: none;
+  }
+
   /*
   .nickname {
     background: linear-gradient(45deg, blue, red);
