--- a/src/assets/html/menu.html
+++ b/src/assets/html/menu.html
@@ -310,6 +310,10 @@
         <i class="fas fa-cog"></i>
         Miscellaneous
       </div>
+      <div data-tab="externalfeatures" class="juice tab">
+        <i class="fas fa-tachometer-alt"></i>
+        External Features
+      </div>
     </div>
     <div class="footer">
       <span class="keybind"></span>
@@ -497,6 +501,23 @@
           <button class="juice change-keybind"></button>
         </div>
       </div>
+    </div>
+    <div id="externalfeatures-options" class="juice options">
+      <div class="option">
+          <span>Container opener</span>
+            <select id="Opener" style="width: 200px;"><option value="none">-</option>
+            <option value="Chest_Golden">Golden</option>
+            <option value="Chest_Ice">Ice</option>
+            <option value="Chest_Wood">Wood</option>
+            <option value="Chest_All">All Chests</option>
+            <option value="Card_Cold">Cold</option>
+            <option value="Card_Girlsband">Girls band</option>
+            <option value="Card_Party">Party</option>
+            <option value="Card_Soldiers">Soldiers</option>
+            <option value="Card_Periodic">Periodic</option>
+            <option value="Card_All">All Cards</option>
+			</select>
+        </div>
     </div>
   </div>
 </div>
