--- a/src/assets/html/menu.html
+++ b/src/assets/html/menu.html
@@ -680,6 +680,19 @@
           />
         </div>
       </div>
+      <div class="option-group">
+        <div class="option">
+          <span>Badges and Gradient Names</span>
+          <div class="checkbox">
+            <input
+              type="checkbox"
+              id="customizations"
+              data-setting="customizations"
+            />
+            <label for="customizations"></label>
+          </div>
+        </div>
+      </div>
     </div>
     <div id="game-options" class="juice options">
       <div class="option-group">
