--- a/src/assets/html/menu.html
+++ b/src/assets/html/menu.html
@@ -4,7 +4,6 @@
 />
 <style>
   @import url("https://fonts.cdnfonts.com/css/satoshi");
-
   .menu[data-theme="dark"] {
     --dark: 20, 20, 20;
     --light: 255, 255, 255;
@@ -20,7 +19,6 @@
     --opacity-half: 255, 255, 255, 0.5;
     --opacity-quarter: 255, 255, 255, 0.25;
   }
-
   .menu[data-theme="light"] {
     --dark: 202, 253, 211;
     --light: 0, 0, 0;
@@ -36,12 +34,15 @@
     --opacity-half: 0, 0, 0, 0.5;
     --opacity-quarter: 0, 0, 0, 0.25;
   }
-
   .menu[data-theme="legacy"] {
-    background: linear-gradient(to bottom, rgba(var(--green), .8), rgba(var(--orange), .8));
+    background: linear-gradient(
+      to bottom,
+      rgba(var(--green), 0.8),
+      rgba(var(--orange), 0.8)
+    );
     backdrop-filter: blur(5px);
-    --dark: 255,255,255;
-    --light: 255,255,255;
+    --dark: 255, 255, 255;
+    --light: 255, 255, 255;
     --orange: 255, 147, 45;
     --green: 172, 250, 112;
     --blue: 88, 101, 242;
@@ -54,15 +55,12 @@
     --opacity-half: 255, 255, 255, 0.5;
     --opacity-quarter: 255, 255, 255, 0.25;
   }
-
   .menu[data-theme="legacy"] option {
     color: black;
   }
-
   .menu ::-webkit-scrollbar {
     display: none;
   }
-
   @keyframes rotateHue {
     0% {
       filter: hue-rotate(0deg);
@@ -71,19 +69,15 @@
       filter: hue-rotate(360deg);
     }
   }
-
   .menu i {
     font-family: "Font Awesome 6 Free" !important;
   }
-
   .menu .sidebar i {
     width: 1.25rem;
   }
-
   .menu i.fab {
     font-family: "Font Awesome 6 Brands" !important;
   }
-
   .menu {
     font-family: "Satoshi", sans-serif;
     display: none;
@@ -100,22 +94,18 @@
     transition: 0.3s;
     z-index: 9999;
   }
-
   .menu[data-active="true"] {
     display: grid;
   }
-
   .menu .checkbox {
     position: relative;
     display: inline-block;
     width: 3rem;
     height: 1.5rem;
   }
-
   .menu .checkbox input {
     display: none;
   }
-
   .menu .checkbox label {
     position: absolute;
     top: 0;
@@ -127,11 +117,9 @@
     cursor: pointer;
     transition: background 0.3s;
   }
-
   .menu .checkbox input:checked + label {
     background: rgba(var(--orange));
   }
-
   .menu .checkbox label:after {
     content: "";
     position: absolute;
@@ -143,11 +131,9 @@
     border-radius: 50%;
     transition: left 0.3s;
   }
-
   .menu .checkbox input:checked + label:after {
     left: 1.75rem;
   }
-
   .menu > .content {
     grid-area: content;
     display: flex;
@@ -155,7 +141,6 @@
     padding: 1rem;
     overflow-y: scroll;
   }
-
   .menu .content input[type="text"] {
     width: 40%;
     box-sizing: border-box;
@@ -168,11 +153,9 @@
     font-family: "Satoshi", sans-serif;
     outline: none;
   }
-
   .menu input[type="text"]::placeholder {
     color: rgba(var(--opacity-half));
   }
-
   .menu .footer {
     box-sizing: border-box;
     margin-top: auto;
@@ -181,24 +164,20 @@
     color: rgba(var(--opacity-half));
     font-size: 0.9rem;
   }
-
   .menu .footer .bottom {
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
-
   .menu .juice.options {
     display: none;
     gap: 1rem;
     flex-direction: column;
     height: 100%;
   }
-
   .menu .juice.options.active {
     display: flex;
   }
-
   .menu .juice.tab {
     width: 100%;
     box-sizing: border-box;
@@ -213,17 +192,14 @@
     transition: 0.2s;
     border-radius: 0.5rem;
   }
-
   .menu .juice.tab:hover {
     background: rgba(var(--hover-light));
   }
-
   .menu .juice.tab.active {
     background: rgba(var(--dark), 0.1);
     color: rgba(var(--light));
     border: 0.1rem solid rgba(var(--border));
   }
-
   .menu .option-group {
     display: flex;
     flex-direction: column;
@@ -232,44 +208,36 @@
     padding: 1rem;
     border-radius: 0.5rem;
   }
-
   .menu .option-group.bottom {
     margin-top: auto;
   }
-
   .menu .option {
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
-
   .menu .option.dropdown {
     flex-direction: column;
     align-items: flex-start;
     overflow: hidden;
     transition: 0.2s;
   }
-
   .menu .option.dropdown .content {
     height: 0;
     width: 100%;
     transition: 0.2s ease;
   }
-
   .menu .option.dropdown.active .content {
     margin-top: 1rem;
     height: 100%;
   }
-
   .menu .option.dropdown i {
     transition: 0.2s;
     transform: rotate(-90deg);
   }
-  
   .menu .option.dropdown.active i {
     transform: rotate(0deg);
   }
-
   .menu textarea {
     min-height: 4rem;
     width: 100%;
@@ -283,7 +251,6 @@
     outline: none;
     transition: 0.2s ease;
   }
-
   .menu .range {
     appearance: none;
     width: 45%;
@@ -294,7 +261,6 @@
     opacity: 0.7;
     transition: opacity 0.2s;
   }
-
   .menu .range::-webkit-slider-thumb {
     appearance: none;
     width: 1rem;
@@ -303,7 +269,6 @@
     border-radius: 50%;
     cursor: pointer;
   }
-
   .menu select {
     width: 50%;
     height: 2.5rem;
@@ -316,20 +281,25 @@
     outline: none;
     appearance: none;
   }
-
   .menu option {
     background: rgba(var(--dark), 1);
     height: 2.5rem;
     color: rgb(var(--light));
   }
-
+  .menu .option > .left {
+    display: flex;
+    flex-direction: column;
+  }
+  .menu .option .description {
+    font-size: 0.8rem;
+    color: rgba(var(--opacity-half));
+  }
   .menu .restart:after,
   .menu .requires-restart > span:after {
     content: "*";
     color: rgba(var(--red));
     margin-left: 0.25rem;
   }
-
   .menu .search-input {
     box-sizing: border-box;
     width: 100%;
@@ -346,7 +316,6 @@
     gap: 0.25rem;
     flex-shrink: 0;
   }
-
   .menu .search-input input {
     background: transparent;
     border: none;
@@ -354,12 +323,10 @@
     font-family: "Satoshi", sans-serif;
     outline: none;
   }
-
   .menu .search-input i {
     color: rgba(var(--opacity-half));
     font-size: 0.75rem;
   }
-
   .menu .sep {
     width: 100%;
     height: 1px;
@@ -367,7 +334,6 @@
     background: rgba(var(--border));
     flex-shrink: 0;
   }
-
   .menu .sidebar {
     grid-area: sidebar;
     display: flex;
@@ -375,13 +341,11 @@
     padding: 1.5rem;
     border-right: rgba(var(--border)) 1px solid;
   }
-
   .menu .tab-group {
     display: flex;
     flex-direction: column;
     gap: 1rem;
   }
-
   .menu .change-keybind {
     width: fit-content;
     height: 2.5rem;
@@ -397,74 +361,61 @@
     font-family: "Satoshi", sans-serif;
     outline: none;
   }
-
   .menu .change-keybind:hover {
     background: rgba(var(--hover-light));
   }
-
   .menu .change-keybind.active {
     color: rgba(var(--opacity-half));
     background: rgba(var(--border-active));
   }
-
   .menu .sidebar span {
     font-size: 0.8rem;
     color: rgba(var(--opacity-half));
   }
-
   .about-top {
     display: flex;
     align-items: center;
     height: 100%;
     gap: 1rem;
   }
-
   .about-top img {
     width: 6rem;
     height: 6rem;
     object-fit: contain;
     -webkit-user-drag: none;
   }
-
   .about-top.compact img {
     width: 3rem;
     height: 3rem;
   }
-
   .about-top .about-info {
     display: flex;
     width: 100%;
     flex-direction: column;
   }
-
   .about-top.compact .about-info {
     flex-direction: row;
     align-items: center;
-    gap: 0.5rem
+    gap: 0.5rem;
   }
-
   .about-top .title {
     display: flex;
     font-size: 3rem;
   }
-
   .about-top.compact .title {
     font-size: 1.5rem;
     flex-shrink: 0;
   }
-
   .about-info .about-more {
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
-
   .about-buttons {
     display: flex;
     gap: 0.5rem;
   }
-
   .about-buttons a {
     display: flex;
     justify-content: center;
@@ -479,13 +430,11 @@
     font-size: 1.25rem;
     transition: 0.2s;
   }
-
   .about-buttons a.alt {
     font-size: 0.95rem !important;
     padding: 0 1rem;
     width: max-content !important;
   }
-
   .about-buttons a .custom-border {
     position: absolute;
     top: 0;
@@ -495,58 +444,45 @@
     border: 0.2rem solid rgba(255, 255, 255, 0.25);
     border-radius: 0.5rem;
   }
-
   .about-discord {
     background: #5865f2;
   }
-
   .about-discord:hover {
     background: #626ffc;
   }
-
   .about-github {
     background: #141414;
   }
-
   .about-github:hover {
     background: #1f1f1f;
   }
-
   .about-kirka {
     background: #37477c;
   }
-
   .about-kirka:hover {
     background: #3f518d;
   }
-
   .about-kirka img {
     width: 1.5rem;
     height: 1.5rem;
     object-fit: contain;
   }
-
   .about-kirkatools {
     background: rgb(31 7 0);
   }
-
   .about-kirkatools:hover {
     background: rgb(41 9 0);
   }
-
   .about-juice {
     background: rgba(var(--orange));
   }
-
   .about-juice:hover {
     background: rgba(var(--orange), 0.9);
   }
-
   .author {
     color: rgba(var(--light), 0.5);
   }
 </style>
-
 <div class="menu" data-theme="dark" data-active="true">
   <aside class="sidebar">
     <div class="search-input">
@@ -817,13 +753,67 @@
       </div>
       <div class="option-group">
         <div class="option">
+          <div class="left">
+            <span>General News</span>
+            <span class="description">Juice-related news</span>
+          </div>
+          <div class="checkbox">
+            <input
+              type="checkbox"
+              id="general_news"
+              data-setting="general_news"
+            />
+            <label for="general_news"></label>
+          </div>
+        </div>
+        <div class="option">
+          <div class="left">
+            <span>Promotional News</span>
+            <span class="description"
+              >Live events (has a "LIVE" indicator)</span
+            >
+          </div>
+          <div class="checkbox">
+            <input
+              type="checkbox"
+              id="promotional_news"
+              data-setting="promotional_news"
+            />
+            <label for="promotional_news"></label>
+          </div>
+        </div>
+        <div class="option">
+          <div class="left">
+            <span>Event News</span>
+            <span class="description">Events that you can participate in</span>
+          </div>
+          <div class="checkbox">
+            <input type="checkbox" id="event_news" data-setting="event_news" />
+            <label for="event_news"></label>
+          </div>
+        </div>
+        <div class="option">
+          <div class="left">
+            <span>Alerts</span>
+            <span class="description"
+              >Important alerts mainly posted by Kirka Staff</span
+            >
+          </div>
+          <div class="checkbox">
+            <input type="checkbox" id="alert_news" data-setting="alert_news" />
+            <label for="alert_news"></label>
+          </div>
+        </div>
+      </div>
+      <div class="option-group">
+        <div class="option">
           <span>Menu Theme</span>
           <select id="menu_theme" data-setting="menu_theme">
             <option value="dark">Dark</option>
             <option value="light">Light</option>
             <option value="legacy">Legacy</option>
           </select>
-          </div>
+        </div>
       </div>
     </div>
     <div id="scripts-options" class="juice options">
@@ -831,92 +821,92 @@
         <div class="option">
           <span>Pack/Chest Opener</span>
           <select id="opener">
-              <option value="none">None</option>
-              <option value="Chest_Golden">Golden</option>
-              <option value="Chest_Ice">Ice</option>
-              <option value="Chest_Wood">Wood</option>
-              <option value="Chest_All">All Chests</option>
-              <option value="Card_Cold">Cold</option>
-              <option value="Card_Girlsband">Girls band</option>
-              <option value="Card_Party">Party</option>
-              <option value="Card_Soldiers">Soldiers</option>
-              <option value="Card_Periodic">Periodic</option>
-              <option value="Card_All">All Cards</option>
-            </select>
+            <option value="none">None</option>
+            <option value="Chest_Golden">Golden</option>
+            <option value="Chest_Ice">Ice</option>
+            <option value="Chest_Wood">Wood</option>
+            <option value="Chest_All">All Chests</option>
+            <option value="Card_Cold">Cold</option>
+            <option value="Card_Girlsband">Girls band</option>
+            <option value="Card_Party">Party</option>
+            <option value="Card_Soldiers">Soldiers</option>
+            <option value="Card_Periodic">Periodic</option>
+            <option value="Card_All">All Cards</option>
+          </select>
+        </div>
+      </div>
+    </div>
+    <div id="about-client" class="juice options">
+      <div class="option-group">
+        <div class="about-top">
+          <img src="https://juice.irrvlo.xyz/juice.png" />
+          <div class="about-info">
+            <span class="title">Juice Client</span>
+            <div class="about-more">
+              <div>
+                <span class="ver"></span>
+                <span class="author">by irrvlo</span>
+              </div>
+              <div class="about-buttons">
+                <a href="https://kirka.io/profile/H8N3U4" class="about-kirka">
+                  <img src="https://kirka.io/favicon.ico" />
+                  <div class="custom-border"></div>
+                </a>
+                <a
+                  href="https://discord.gg/FjzAAdSjng"
+                  target="_blank"
+                  class="about-discord"
+                >
+                  <i class="fab fa-discord"></i>
+                  <div class="custom-border"></div>
+                </a>
+                <a
+                  href="https://github.com/irrvlo/juice-client"
+                  target="_blank"
+                  class="about-github"
+                >
+                  <i class="fab fa-github"></i>
+                  <div class="custom-border"></div>
+                </a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-      <div id="about-client" class="juice options">
-        <div class="option-group">
-          <div class="about-top">
-            <img src="https://juice.irrvlo.xyz/juice.png" />
-            <div class="about-info">
-              <span class="title">Juice Client</span>
-              <div class="about-more">
-                <div>
-                  <span class="ver"></span>
-                  <span class="author">by irrvlo</span>
-                </div>
-                <div class="about-buttons">
-                  <a href="https://kirka.io/profile/H8N3U4" class="about-kirka">
-                    <img src="https://kirka.io/favicon.ico" />
-                    <div class="custom-border"></div>
-                  </a>
-                  <a
-                    href="https://discord.gg/FjzAAdSjng"
-                    target="_blank"
-                    class="about-discord"
-                  >
-                    <i class="fab fa-discord"></i>
-                    <div class="custom-border"></div>
-                  </a>
-                  <a
-                    href="https://github.com/irrvlo/juice-client"
-                    target="_blank"
-                    class="about-github"
-                  >
-                    <i class="fab fa-github"></i>
-                    <div class="custom-border"></div>
-                  </a>
-                </div>
+      <div class="option-group">
+        <div class="about-top compact">
+          <img src="https://juice.irrvlo.xyz/irrvlo_k.png" />
+          <div class="about-info compact">
+            <span class="title">Kirka Tools</span>
+            <div class="about-more">
+              <div></div>
+              <div class="about-buttons">
+                <a href="https://kirka.irrvlo.xyz" class="about-kirkatools alt">
+                  <i class="fas fa-arrow-up-right-from-square"></i>
+                  <p>Check it out!</p>
+                  <div class="custom-border"></div>
+                </a>
               </div>
             </div>
           </div>
         </div>
-        <div class="option-group">
-          <div class="about-top compact">
-            <img src="https://juice.irrvlo.xyz/irrvlo_k.png" />
-            <div class="about-info compact">
-              <span class="title">Kirka Tools</span>
-              <div class="about-more">
-                <div>
-                </div>
-                <div class="about-buttons">
-                  <a href="https://kirka.irrvlo.xyz" class="about-kirkatools alt">
-                    <i class="fas fa-arrow-up-right-from-square"></i>
-                    <p>Check it out!</p>
-                    <div class="custom-border"></div>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="option-group">
-          <div class="about-top compact">
-            <img src="https://juice.irrvlo.xyz/bubbles.png" />
-            <div class="about-info compact">
-              <span class="title">Patch Notes</span>
-              <div class="about-more">
-                <div>
-                </div>
-                <div class="about-buttons">
-                  <a href="https://juice.irrvlo.xyz/patch-notes" class="about-juice alt">
-                    <i class="fas fa-arrow-up-right-from-square"></i>
-                    <p>View</p>
-                    <div class="custom-border"></div>
-                  </a>
-                </div>
+      </div>
+      <div class="option-group">
+        <div class="about-top compact">
+          <img src="https://juice.irrvlo.xyz/bubbles.png" />
+          <div class="about-info compact">
+            <span class="title">Patch Notes</span>
+            <div class="about-more">
+              <div></div>
+              <div class="about-buttons">
+                <a
+                  href="https://juice.irrvlo.xyz/patch-notes"
+                  class="about-juice alt"
+                >
+                  <i class="fas fa-arrow-up-right-from-square"></i>
+                  <p>View</p>
+                  <div class="custom-border"></div>
+                </a>
               </div>
             </div>
           </div>
